--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block title %}
-  Публикации в категории - personal
+  Публикации в категории - {{ category }}
 {% endblock %}
 {% block content %}
-  <h1>Публикации в категории - personal</h1>
+  <h1>Публикации в категории - {{ category }}</h1>
 {% endblock %}
  
