--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -6,17 +6,7 @@
 {% endblock %}
 {% block content %}
   <article>
-    <ul>
-      <li>
-        Место: {{ post.location }}              
-      </li>
-      <li>
-        Дата: {{ post.date }}
-      </li>
-      <li>
-        Категория: <a href={% url 'blog:category' post.category %}>{{ post.category }}</a>
-      </li>
-    </ul>         
+    {% include "includes/post_model.html" %}         
     <p>
       {{ post.text }}
     </p>          
