--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -9,17 +9,7 @@
   {% for post in posts %}
     <hr>
     <article>
-      <ul>
-        <li>
-          Место: {{ post.location }}              
-        </li>
-        <li>
-          Дата: {{ post.date }}
-        </li>
-        <li>
-          Категория: <a href={% url 'blog:category' post.category %}>{{ post.category }}</a>
-        </li>
-      </ul>
+      {% include "includes/post_model.html" %}
       <p>
         {{ post.text|truncatewords:10 }}
       </p>
