--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -8,12 +8,10 @@
   <h1>Лента записей</h1>
   {% for post in posts %}
     <hr>
-    <article>
-      {% include "includes/post_model.html" %}
-      <p>
-        {{ post.text|truncatewords:10 }}
-      </p>
-      <a href={% url 'blog:post_detail' post.id %}>Читать полный текст</a>
-    </article>
+    {% include "includes/post_model.html" %}
+  {% empty %}
+    <p>
+      Записей пока нет
+    </p>
   {% endfor %}
 {% endblock %}
